# AlpacaInTheLight

./: CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  material.cpp  stdafx.h
core/: camera.cpp  camera.h  common.h  engin.cpp  engine.h  graph.cpp  graph.h  math.cpp  math.h
impl/: materials.cpp  materials.h  objects.cpp  objects.h
